--- a/liquidButtonLib/build.gradle
+++ b/liquidButtonLib/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.gospelware.liquildbutton"
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
@@ -23,5 +22,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
-    compile project(path: ':liquidButtonLib')
 }
