--- a/liquidButtonLib/build.gradle
+++ b/liquidButtonLib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-version = "1.1.2"
+version = "1.1.3"
 
 android {
     compileSdkVersion 23
@@ -29,6 +29,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:support-v4:23.4.0'
 }
 
 def siteUrl='https://github.com/yoruriko/LiquidButton'
